Test/comp/Collections.dfy.refresh.expect
Collections.dfy(563,13): Error: PRE-TYPE: sequence update requires integer- or bitvector-based index (got bv3)
Collections.dfy(526,7): Error: not resolving module '_module' because there were errors in resolving its nested module 'Regressions'
2 resolution/type errors detected in Collections.dfy
